# atlassian-client

./: AGENTS.md  LICENSE  pyproject.toml
.github/workflows/: checks.yml  publish.yml  test.yml
atlassian/: __init__.py
atlassian/bitbucket/: __init__.py  async_client.py  async_resources.py  client.py  endpoints.py  models.py  resources.py
atlassian/confluence/: __init__.py  async_client.py  async_resources.py  client.py  endpoints.py  models.py  pagination.py  resource.py  resources.py
atlassian/core/: __init__.py  async_client.py  auth.py  client.py  endpoint.py  exceptions.py  pagination.py  resource.py
atlassian/jira/: __init__.py  async_client.py  async_resources.py  endpoints.py  models.py  resource.py  resources.py
atlassian/utils/: __init__.py
scripts/: fix_sync_imports.py  generate_resources.py  sync.py
specs/bitbucket/: openapi.json
specs/confluence/: openapi.json
specs/jira/: openapi.json
tests/unit/bitbucket/: test_bitbucket_async_client.py
tests/unit/confluence/: test_confluence_async_client.py
tests/unit/core/: test_async_client.py  test_auth.py  test_endpoint.py  test_exceptions.py  test_pagination.py  test_resource.py
tests/unit/jira/: test_jira_async_client.py
