[project]
name = "atlassian-client"
version = "0.1.0"
description = "Python client for Atlassian Data Center REST APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.1", "pydantic>=2.12.5"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.54.0",
    "deptry>=0.24.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "ty>=0.0.17",
    "unasyncd>=0.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["atlassian/*/models.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.unasyncd]
files = { "atlassian/core/async_client.py" = "atlassian/core/client.py", "atlassian/bitbucket/async_client.py" = "atlassian/bitbucket/client.py", "atlassian/bitbucket/async_resources.py" = "atlassian/bitbucket/resources.py" }
add_replacements = { "httpx.AsyncClient" = "httpx.Client", "AsyncBaseClient" = "BaseClient", "AsyncResource" = "Resource", "AsyncBitBucketClient" = "BitBucketClient", "AsyncPageIterator" = "PageIterator" }
transform_docstrings = true
ruff_fix = true
ruff_format = true
add_editors_note = true

[tool.deptry.per_rule_ignores]
DEP004 = ["datamodel_code_generator"]

[tool.ty.src]
exclude = ["atlassian/*/models.py"]
