[project]
name = "atlassian-client"
version = "0.1.0"
description = "Python client for Atlassian Data Center REST APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.1", "pydantic>=2.12.5"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.54.0",
    "deptry>=0.24.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "ty>=0.0.17",
    "unasyncd>=0.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["atlassian/*/models.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "I", "N"]

[tool.unasyncd]
transform_docstrings = true
ruff_fix = false
ruff_format = true
add_editors_note = true

[tool.unasyncd.files]
"atlassian/core/async_client.py" = "atlassian/core/client.py"
"atlassian/bitbucket/async_client.py" = "atlassian/bitbucket/client.py"
"atlassian/bitbucket/async_resources.py" = "atlassian/bitbucket/resources.py"
"atlassian/confluence/async_client.py" = "atlassian/confluence/client.py"
"atlassian/confluence/async_resources.py" = "atlassian/confluence/resources.py"


[tool.unasyncd.add_replacements]
"httpx.AsyncClient" = "httpx.Client"
"AsyncBaseClient" = "BaseClient"
"AsyncResource" = "Resource"
"ConfluenceAsyncResource" = "ConfluenceResource"
"AsyncBitBucketClient" = "BitBucketClient"
"AsyncConfluenceClient" = "ConfluenceClient"
"AsyncPageIterator" = "PageIterator"
"httpx.AsyncBaseTransport" = "httpx.BaseTransport"
"AsyncProjectsResource" = "ProjectsResource"
"AsyncRepositoriesResource" = "RepositoriesResource"
"AsyncPullRequestsResource" = "PullRequestsResource"
"AsyncAuthenticationResource" = "AuthenticationResource"
"AsyncBuildsResource" = "BuildsResource"
"AsyncPermissionsResource" = "PermissionsResource"
"AsyncSecurityResource" = "SecurityResource"
"AsyncAdminResource" = "AdminResource"
"AsyncDashboardResource" = "DashboardResource"
"AsyncMirroringResource" = "MirroringResource"
"AsyncJiraIntegrationResource" = "JiraIntegrationResource"
"AsyncMarkupResource" = "MarkupResource"
"AsyncContentResource" = "ContentResource"
"AsyncContentLabelsResource" = "ContentLabelsResource"
"AsyncContentPropertyResource" = "ContentPropertyResource"
"AsyncContentRestrictionsResource" = "ContentRestrictionsResource"
"AsyncContentDescendantResource" = "ContentDescendantResource"
"AsyncChildContentResource" = "ChildContentResource"
"AsyncAttachmentsResource" = "AttachmentsResource"
"AsyncSpaceResource" = "SpaceResource"
"AsyncSpaceLabelResource" = "SpaceLabelResource"
"AsyncSpacePermissionsResource" = "SpacePermissionsResource"
"AsyncSpacePropertyResource" = "SpacePropertyResource"
"AsyncSpaceColorSchemeResource" = "SpaceColorSchemeResource"
"AsyncGroupResource" = "GroupResource"
"AsyncUserResource" = "UserResource"
"AsyncUserWatchResource" = "UserWatchResource"
"AsyncSearchResource" = "SearchResource"
"AsyncLabelResource" = "LabelResource"
"AsyncLongTaskResource" = "LongTaskResource"
"AsyncBackupRestoreResource" = "BackupRestoreResource"
"AsyncWebhooksResource" = "WebhooksResource"
"AsyncGlobalPermissionsResource" = "GlobalPermissionsResource"
"AsyncGlobalColorSchemeResource" = "GlobalColorSchemeResource"
"AsyncCategoryResource" = "CategoryResource"
"AsyncAccessModeResource" = "AccessModeResource"
"AsyncServerInfoResource" = "ServerInfoResource"

[tool.deptry.per_rule_ignores]
DEP004 = ["datamodel_code_generator"]

[tool.ty.src]
exclude = ["atlassian/*/models.py"]
